@@ -5,6 +5,9 @@
 
   * New archive type 'iso', using bsdtar for data extraction
 
+  * get_value: New helper function allowing to get the value of a variable
+    using a dynamically generated name
+
 2.9.2
 
   * set_temp_directories: Improve the generation of the temporary work
